<resources>
    <string name="app_name">R6 Assistant</string>
    <string name="go">GO</string>
    <string name="or">OR</string>
    <string name="close">Close</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="cameras">Cameras</string>
    <string name="twitch">Twitch</string>
    <string name="mapplans">Maps &amp; Plans</string>
    <string name="online">Online \n Chat &amp; find players</string>
    <string name="guns">Weapons Stats</string>
    <string name="operators">Operators</string>
    <string name="more">More</string>
    <string name="soon">Soon…</string>
    <string name="msgsoon">This new feature is coming soon !</string>
    <string name="update_title">An update is available !</string>
    <string name="update_text">You are using an older version of R6 Assistant, do you want to update it ?</string>
    <string name="update_data_text">There is a new data update for :</string>
    <string name="update">Update</string>
    <string name="update_data_armies">Armies</string>
    <string name="update_data_maps">Maps</string>
    <string name="update_data_operators">Operators</string>
    <string name="update_data_weapons">Weapons</string>
    <string name="update_launching">Launching update…</string>
    <string name="update_updating_x">Updating %s …</string>
    <string name="update_data_done">Data update done !</string>
    <string name="ratetitle">Rate R6 Assistant</string>
    <string name="ratemsg">Rate the application and give your feedback on the Play Store</string>
    <string name="error_market">Error : unable to find the Play Store App !</string>
    <string name="beta_msg">This is a BETA !\nIt means it could miss things. We are working on translation !</string>
    <string name="byoperator">By operators</string>
    <string name="byweapons">By weapons</string>
    <string name="legs">legs</string>
    <string name="body">body</string>
    <string name="rookarmor">Rook Armor</string>
    <string name="weapontype_assault_rifle">Assault Rifle</string>
    <string name="weapontype_handgun">Handgun</string>
    <string name="weapontype_light_machine_gun">Light Machine Gun</string>
    <string name="weapontype_machine_pistol">Machine Pistol</string>
    <string name="weapontype_marksman_rifle">Marksman Rifle</string>
    <string name="weapontype_shotgun">Shotgun</string>
    <string name="weapontype_submachine_gun">Submachine Gun</string>
    <string name="compensator">Compensator</string>
    <string name="flash_hider">Flash hider</string>
    <string name="muzzle_brake">Muzzle brake</string>
    <string name="suppressor">Suppressor</string>
    <string name="extended_barrel">Extended barrel</string>
    <string name="help_title">Weapon Stats</string>
    <string name="help_ammo">This is the number of ammo in a loader.</string>
    <string name="help_firerate">This is the Fire rate, it\'s the frequency at which a specific weapon can fire or launch its projectiles</string>
    <string name="help_damagefalloff">This is the Damage Falloff, it\'s the range where you start doing less damage</string>
    <string name="help_armor">Damage against an operator with 1, 2 or 3 of armor</string>
    <string name="help_armor_rook">Damage against an operator with 1, 2 or 3 of armor equipped with a rook armor</string>
    <string name="help_barrel">At the bottom of stats page, you can see the ranking of barrels. \nThe first is the one which had the most reliable spray to control.\n Anyways it\'s up to you and your playstyle.</string>
    <string name="stats_credit_1">Thanks a lot to Sergio for the sheet of stats ! Without him, nothing would have been possible. \nCLICK HERE to see his Youtube Channel</string>
    <string name="stats_credit_2">Thanks a lot to VarsityGaming as well, for its videos about attachment ! \nCLICK HERE to see his Youtube Channel</string>
    <string name="bycountries">By countries</string>
    <string name="attackers">Attackers</string>
    <string name="defenders">Defenders</string>
    <string name="attacker">Attacker</string>
    <string name="defender">Defender</string>
    <string name="armor_light">Light</string>
    <string name="armor_heavy">Heavy</string>
    <string name="speed_slow">Slow</string>
    <string name="speed_fast">Fast</string>
    <string name="medium">Medium</string>
    <string name="speed">Speed</string>
    <string name="armor">Armor</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="gadget">Gadget</string>
    <string name="ugadget">Unique gadget</string>
    <string name="gad_barbed">Barbed wires</string>
    <string name="gad_breach">Breach charges</string>
    <string name="gad_frag">Frag grenades</string>
    <string name="gad_nitro">Nitro cell</string>
    <string name="gad_shield">Deployable shield</string>
    <string name="gad_smoke">Smoke grenades</string>
    <string name="gad_stun">Stun grenades</string>
    <string name="gad_impact">Impact grenades</string>
    <string name="gad_claymore">Claymore</string>
    <string name="gad_camera">Bulletproof camera</string>
    <string name="ugat_ash">M120 CREM</string>
    <string name="uga_ash">Fires an explosive Breach Round that burrows into a surface and automatically detonates.</string>
    <string name="ugat_bandit">CED-1</string>
    <string name="uga_bandit">Sets high-tension Shock Wire on metallic gadgets, dealing damage to enemies.</string>
    <string name="ugat_blackbeard">TARS MK 0-Armored Rifle Shield</string>
    <string name="uga_blackbeard">Has a backup mounted shield to swap if the first one gets damaged.</string>
    <string name="ugat_blitz">G52-Tactical Shield</string>
    <string name="uga_blitz">Triggers the flash attached to his ballistic shield to temporarily blind enemies.</string>
    <string name="ugat_buck">SK 4–12</string>
    <string name="uga_buck">Toggles under-barrel shotgun attachment on his main weapon.</string>
    <string name="ugat_capitao">TAC Mk0</string>
    <string name="uga_capitao">Tactical crossbow firing asphyxiating bolts and micro smoke grenades.</string>
    <string name="ugat_castle">UTP1-Universal Tactical Panel</string>
    <string name="uga_castle">Sets bulletproof barricades, more resistant than standard ones.</string>
    <string name="ugat_caveira">Silent step</string>
    <string name="uga_caveira">Caveira\'s predatory stealth, the "Silent Step" allows her to lurk on her prey, almost inaudible, until it\'s too late.</string>
    <string name="ugat_doc">MPD-0 Stim Pistol</string>
    <string name="uga_doc">Fires a hypodermic shot to revive himself or teammates from a distance. Can also provide a temporary boost.</string>
    <string name="ugat_echo">YOKAI</string>
    <string name="uga_echo">Hovering drone that releases disorienting sonic bursts. Yokai also transmits a video feed to the Echo and his team.</string>
    <string name="ugat_frost">Sterling MK2 LHT</string>
    <string name="uga_frost">Uses a mechanical trap to incapacitate enemies.</string>
    <string name="ugat_fuze">APM-6 "Matryoshka"</string>
    <string name="uga_fuze">Uses Cluster Charge that pierce and stick to walls, releasing sub-grenades on the opposing side.</string>
    <string name="ugat_glaz">HDS Flip Sight</string>
    <string name="uga_glaz">Toggles a magnification scope with sophisticated image sensors outlining long range marks, even trough smoke.</string>
    <string name="ugat_hibana">X-KAIROS</string>
    <string name="uga_hibana">A 40mm grenade launcher firing explosive pellets that can be detonated from a distance.</string>
    <string name="ugat_iq">RED MK III "Spectre"</string>
    <string name="uga_iq">Uses the Electronics Detector to locate any electronics in range through obstacles such as walls.</string>
    <string name="ugat_jackal">EYENOX MODEL III</string>
    <string name="uga_jackal">Tracking eyewear that locates targets by revealing and identifying recent footsteps.</string>
    <string name="ugat_jager">ADS-MKIV "Magpie"</string>
    <string name="uga_jager">Uses an Active Defense system to intercept grenades before they detonate.</string>
    <string name="ugat_kapkan">EDD MK II</string>
    <string name="uga_kapkan">Sets booby traps on windows and door frames.</string>
    <string name="ugat_mira">BLACK MIRROR</string>
    <string name="uga_mira">Deploys a one-way bulletproof mirror on breakable and reinforced walls. Also can be ejected to create a murder hole.</string>
    <string name="ugat_montagne">Le Roc</string>
    <string name="uga_montagne">Can expand his Extendable Shield to offer full protection while standing.</string>
    <string name="ugat_mute">GC90 "Moni" Signal Disruptor</string>
    <string name="uga_mute">Jams communications for remotely detonated gadgets or drones in its range.</string>
    <string name="ugat_pulse">HB-5 Cardiac Sensor</string>
    <string name="uga_pulse">Detects heartbeats at a short distance through obstacles.</string>
    <string name="ugat_rook">R1N "Rhino" Armor</string>
    <string name="uga_rook">Drops a supply bag full of armor plates for his team to use.</string>
    <string name="ugat_sledge">Tactical Breaching Hammer "The Caber"</string>
    <string name="uga_sledge">Uses a Breaching Hammer to breach through destructible surfaces.</string>
    <string name="ugat_smoke">Compound Z8 Grenade</string>
    <string name="uga_smoke">Sets remote detonated toxic gas charges.</string>
    <string name="ugat_tachanka">RP-46 Degtyaryov Machine Gun</string>
    <string name="uga_tachanka">Deploys a Mounted LMG with a ballistic shield protecting the head from frontal shots.</string>
    <string name="ugat_thatcher">EG MK0-EMP Grenade</string>
    <string name="uga_thatcher">Uses EMP Grenades to disable any electronics in range.</string>
    <string name="ugat_thermite">BRIMSTONE BC-3 Exothermic Charge</string>
    <string name="uga_thermite">Sets an exotherrmic charge that destroys reinforced walls.</string>
    <string name="ugat_twitch">RSD Model 1 Shock Drone</string>
    <string name="uga_twitch">Uses two Shock Drones to disable traps or injure enemies. Deploys the first Shock Drone during the preparation phase.</string>
    <string name="ugat_valkyrie">Gyro Cam Mk2</string>
    <string name="uga_valkyrie">Can set up "Black Eye" cameras, feed accessible by whole team via observation tools.</string>
    <string name="ugat_ying">Candela</string>
    <string name="uga_ying">Cluster of flash charges that can either be anchored on surfaces or rolled out as a grenade.</string>
    <string name="ugat_lesion">Gu</string>
    <string name="uga_lesion">Cloaked toxic mines injecting a compound which injures opponents and limits their speed.</string>
    <string name="ugat_ela">Grzmot Mine</string>
    <string name="uga_ela">Concussion proximity mines that can be anchored on surfaces, impairing hearing and causing a dizzying effect.</string>
    <string name="ugat_zofia">KS79 LIFELINE</string>
    <string name="uga_zofia">Double barrel that can fire both concussion and impact grenades.</string>
    <string name="message">Message</string>
    <string name="chat">Chat</string>
    <string name="team_platform">Platform:</string>
    <string name="team_rank">Rank:</string>
    <string name="banner_image">Banner Image</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="resetzoom">resetzoom</string>
    <string name="ammo_icon">Ammo Icon</string>
    <string name="firerate_icon">Fire rate Icon</string>
    <string name="damagefall_icon">Damage fall off Icon</string>
    <string name="armor_light_icon">Light Amor Icon</string>
    <string name="armor_medium_icon">Medium Amor Icon</string>
    <string name="armor_heavy_icon">Heavy Amor Icon</string>
    <string name="barrel_1">Image of the Barrel 1</string>
</resources>