<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_zoomout"
        android:orderInCategory="200"
        android:title="@string/zoom_out"
        android:icon="@drawable/ic_zoom_out"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_zoomreset"
        android:orderInCategory="300"
        android:title="@string/resetzoom"
        android:icon="@drawable/ic_zoom_reset"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_zoomin"
        android:orderInCategory="400"
        android:title="@string/zoom_in"
        android:icon="@drawable/ic_zoom_in"
        app:showAsAction="ifRoom" />
</menu>