<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:weightSum="1"
    android:baselineAligned="false">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/banner"
        android:adjustViewBounds="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/banner_image" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonCamera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/ic_camera"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/cameras" />

            <Button
                android:id="@+id/buttonTwitch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/twitch"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/twitch" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonMap"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/ic_map"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/mapplans" />

            <Button
                android:id="@+id/buttonWeapon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/ic_gun"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/guns" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/buttonOperator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/ic_operators"
                android:paddingTop="20dp"
                android:text="@string/operators" />

            <Button
                android:id="@+id/buttonOnline"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/ic_online"
                android:paddingTop="20dp"
                android:text="@string/online"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/buttonMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_info"
            android:drawableStart="@drawable/ic_info"
            android:paddingLeft="7dp"
            android:text="@string/more" />

        <ImageButton
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_settings" />
    </LinearLayout>
</LinearLayout>