<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/defaultheader"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/team_platform"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/imagePlatformTeam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/platform_3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/team_rank"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/imageRankTeam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/rank_1"/>

        <TextView
            android:id="@+id/textPlayerNeededTeam"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_operators"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/defaultheader"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonMinusPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_minus"/>

        <ImageButton
            android:id="@+id/buttonPlusPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_plus"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/chat"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <ListView
        android:id="@+id/list_msg_team"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:transcriptMode="alwaysScroll"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/input_msg_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_team_msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_send"
            android:tint="@android:color/white"
            app:fabSize="mini"
            />
    </LinearLayout>

</LinearLayout>